# permguard-trustplane

./: Cargo.toml  Taskfile.yml
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
src/assets/: art.txt
